:pencil2: Initial content & structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,38 @@
 </head>
 
 <body>
-	<h1>Hello World</h1>
+	<header id="homepage-header">
+		<div id="best-logo">
+			<div class="logo-line-1">Best International</div>
+			<div class="logo-line-2">Group</div>
+		</div>
+
+		<nav>
+			<div>Discover Services News Contact Group <strong>Performance Review 2015</strong></div>
+		</nav>
+
+		<section id="homepage-blurb">
+			Best International Group of<br />
+			Companies is an established<br />
+			corporate finance, asset<br />
+			management and Weath<br />
+			Management provider located<br />
+			throughout the UK.<br />
+			<button type="button" class="read-more-btn">Read More</button>
+		</section>
+	</header>
+
+	<main>
+		<div id="homepage-services-header">Our services include</div>
+		<ul>
+			<li>Corporate<br/>Finance</li>
+			<li>Wealth<br />Management</li>
+			<li>Peer-to-peer<br />Lending</li>
+			<li>Strategic Advice</li>
+			<li>PLACEHOLDER IMAGE</li>
+		</ul>
+
+	</main>
 
 
 </body>
