:abc: Read more button

--- a/index.html
+++ b/index.html
@@ -17,13 +17,7 @@
 			<div>Discover Services News Contact Group <strong>Performance Review 2015</strong></div>
 		</nav>
 
-		<section id="homepage-blurb">
-			Best International Group of<br />
-			Companies is an established<br />
-			corporate finance, asset<br />
-			management and Weath<br />
-			Management provider located<br />
-			throughout the UK.<br />
+		<section id="homepage-blurb">Best International Group of<br />Companies is an established<br />corporate finance, asset<br />management and Weath<br />Management provider located<br />throughout the UK.<br />
 			<button type="button" class="read-more-btn">Read More</button>
 		</section>
 	</header>
