:top: Top section

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Best Internatiol Group</title>
+	<title>Best International Group</title>
 	<link rel="stylesheet" href="css/style.css" />
 	<script type="text/javascript" src="http://fast.fonts.net/jsapi/e59d0666-5441-4909-ad28-e4c031538a20.js"></script>
 </head>
@@ -13,11 +13,18 @@
 			<div class="logo-line-2">Group</div>
 		</div>
 
-		<nav>
-			<div>Discover Services News Contact Group <strong>Performance Review 2015</strong></div>
+		<nav id="homepage-navbar">
+			<ul>
+				<li class="important-navbar-item">Performance Review 2015</li>
+				<li>Group</li>
+				<li>Contact</li>
+				<li>News</li>
+				<li>Services</li>
+				<li>Discover</li>
+			</ul>
 		</nav>
 
-		<section id="homepage-blurb">Best International Group of<br />Companies is an established<br />corporate finance, asset<br />management and Weath<br />Management provider located<br />throughout the UK.<br />
+		<section id="homepage-blurb">Best International Group of Companies is an established corporate finance, asset management and Weath Management provider located throughout the UK.<br />
 			<button type="button" class="read-more-btn">Read More</button>
 		</section>
 	</header>
