:woman: grid header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Best International Group</title>
 	<link rel="stylesheet" href="css/style.css" />
 	<script type="text/javascript" src="http://fast.fonts.net/jsapi/e59d0666-5441-4909-ad28-e4c031538a20.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -29,8 +30,11 @@
 		</section>
 	</header>
 
-	<main>
-		<div id="homepage-services-header">Our services include</div>
+	<main id="services-grid">
+		<header>
+			<div class="header-text">Our services include</div>
+			<div class="header-chevron"><i class="icon-angle-down"></i></div>
+		</header>
 		<ul>
 			<li>Corporate<br/>Finance</li>
 			<li>Wealth<br />Management</li>
