:construction_worker: Responsvie grid

--- a/index.html
+++ b/index.html
@@ -35,12 +35,20 @@
 			<div class="header-text">Our services include</div>
 			<div class="header-chevron"><i class="icon-angle-down"></i></div>
 		</header>
-		<ul>
-			<li>Corporate<br/>Finance</li>
-			<li>Wealth<br />Management</li>
-			<li>Peer-to-peer<br />Lending</li>
-			<li>Strategic Advice</li>
-			<li>PLACEHOLDER IMAGE</li>
+		<div class="row">
+			<div class="col-1">
+				<div class="text-grid">Corporate<br/>Finance</div>
+			</div>
+			<div class="col-1">
+				<div class="text-grid">Wealth<br />Management</div>
+			</div>
+			<div class="col-1">
+				<div class="text-grid">Peer-to-peer<br />Lending</div>
+			</div>
+			<div class="col-1">
+				<div class="text-grid">Strategic Advice</div>
+			</div>
+			<div class="col-2 image-grid"></div>
 		</ul>
 
 	</main>
