:hamburger: Burger menu & media query clean-ups

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<li>Services</li>
 				<li>Discover</li>
 			</ul>
+			<div class="hamburger-nav"><i class="fa fa-bars"></i></div>
 		</nav>
 
 		<section id="homepage-blurb">Best International Group of Companies is an established corporate finance, asset management and Weath Management provider located throughout the UK.<br />
@@ -33,7 +34,7 @@
 	<main id="services-grid">
 		<header>
 			<div class="header-text">Our services include</div>
-			<div class="header-chevron"><i class="icon-angle-down"></i></div>
+			<div class="header-chevron"><i class="fa fa-angle-down"></i></div>
 		</header>
 		<div class="row">
 			<div class="col-1">
