:+1: Adjusted button, chevron & grid style

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 		</header>
 		<div class="row">
 			<div class="col-1">
-				<div class="text-grid">Corporate<br/>Finance</div>
+				<div class="text-grid desktop-grid-border mobile-grid-border">Corporate<br/>Finance</div>
 			</div>
 			<div class="col-1">
-				<div class="text-grid">Wealth<br />Management</div>
+				<div class="text-grid desktop-grid-border">Wealth<br />Management</div>
 			</div>
 			<div class="col-1">
-				<div class="text-grid">Peer-to-peer<br />Lending</div>
+				<div class="text-grid mobile-grid-border">Peer-to-peer<br />Lending</div>
 			</div>
 			<div class="col-1">
 				<div class="text-grid">Strategic Advice</div>
